--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "php": ">=5.3.0"
   },
   "require-dev":{
+    "guzzlehttp/guzzle": "^6.2",
     "phpunit/phpunit": "3.7.*@stable"
   },
   "autoload": {
